-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: client-libs
-
None
-
b149
This change fixes a row of smaller problems where code is noted down a bit questionable, also in ECC and PKCS11 coding. In detail:
awt_InputMethod.c:
One might overrun the 100 byte fixed-size string statusWindow->status by copying text->string.multi_byte without checking the length.
gtk3_interface.c:
This less-than-zero comparison of an unsigned value is never true.
Using uninitialized value color. Field color.alpha is uninitialized.
E.g. used at gtk3_interface.c:2287.
XToolkit.c
Using uninitialized value ret_timeout.
E.g. in XToolkit.c:6809.
XWindow.c
Argument is incompatible with corresponding format string conversion.
splashscreen_sys.c
Overflowed or truncated value (or a value computed from an overflowed or truncated value) (gdk_scale > 0) ? native_scale * (double)gdk_scale : native_scale used as return value.
ec.c
Using uninitialized value k.dp when calling mp_clear.
ecdecode.c
You might overrun the 291 byte fixed-size string genenc by copying curveParams->geny without checking the length.
Added sanity check before doing the string concatenation.
ecl_mult.c
Using uninitialized value kt.flag when calling *group->point_mul. (The function pointer resolves to ec_GF2m_pt_mul_mont.)
mpi.c
Using uninitialized value s. Field s.flag is uninitialized when calling s_mp_exch.
Using uninitialized value tmp. Field tmp.flag is uninitialized when calling s_mp_exch
Using uninitialized value t.dp when calling mp_clear.
p11_mutex.c
Using uninitialized value *ckpInitArgs. Field ckpInitArgs->flags is uninitialized when calling memcpy.
DataBufferNative.c
Using uninitialized value lockInfo.rasBase when calling BN_GetPixelPointer.
fontpath.c
You might overrun the 512 byte fixed-size string fontDirPath by copying DirP->name[index] without checking the length.
awt_InputMethod.c:
One might overrun the 100 byte fixed-size string statusWindow->status by copying text->string.multi_byte without checking the length.
gtk3_interface.c:
This less-than-zero comparison of an unsigned value is never true.
Using uninitialized value color. Field color.alpha is uninitialized.
E.g. used at gtk3_interface.c:2287.
XToolkit.c
Using uninitialized value ret_timeout.
E.g. in XToolkit.c:6809.
XWindow.c
Argument is incompatible with corresponding format string conversion.
splashscreen_sys.c
Overflowed or truncated value (or a value computed from an overflowed or truncated value) (gdk_scale > 0) ? native_scale * (double)gdk_scale : native_scale used as return value.
ec.c
Using uninitialized value k.dp when calling mp_clear.
ecdecode.c
You might overrun the 291 byte fixed-size string genenc by copying curveParams->geny without checking the length.
Added sanity check before doing the string concatenation.
ecl_mult.c
Using uninitialized value kt.flag when calling *group->point_mul. (The function pointer resolves to ec_GF2m_pt_mul_mont.)
mpi.c
Using uninitialized value s. Field s.flag is uninitialized when calling s_mp_exch.
Using uninitialized value tmp. Field tmp.flag is uninitialized when calling s_mp_exch
Using uninitialized value t.dp when calling mp_clear.
p11_mutex.c
Using uninitialized value *ckpInitArgs. Field ckpInitArgs->flags is uninitialized when calling memcpy.
DataBufferNative.c
Using uninitialized value lockInfo.rasBase when calling BN_GetPixelPointer.
fontpath.c
You might overrun the 512 byte fixed-size string fontDirPath by copying DirP->name[index] without checking the length.