8170525: Fix minor issues in AWT/ECC/PKCS11 coding

Reviewed-by: vinnie, clanger, prr, ssadetsky