jdk/src/java.desktop/unix/native/libawt_xawt/xawt/XToolkit.c
@@ -567,7 +567,7 @@ static void update_poll_timeout(int timeout_control) {
  */
 static uint32_t get_poll_timeout(jlong nextTaskTime)
 {
-    uint32_t ret_timeout;
+    uint32_t ret_timeout = 0;
     uint32_t timeout;
     uint32_t taskTimeout;
     uint32_t flushTimeout;
